@@ -1,0 +1,5 @@
+name=Classless
+lang=Java
+type=Generic
+path=/root/Programs/Java/src/Classless
+src=
