@@ -1,0 +1,5 @@
+name=Pandas
+lang=Java
+type=Generic
+path=/root/Programs/Java/src/Pandas
+src=
