@@ -1,0 +1,5 @@
+name=Tester
+lang=Java
+type=Generic
+path=/home/joespider/Programs/Java/src/Tester
+src=
