@@ -1,0 +1,5 @@
+name=Testers
+lang=C++
+type=Generic
+path=/home/joespider/Programs/C++/src/Testers
+src=
