@@ -1,0 +1,5 @@
+name=helper
+lang=C++
+type=Generic
+path=/home/joespider/Programs/C++/src/helper
+src=
