@@ -28,11 +28,22 @@ ProgDir=~/Programs
 #<Lang>=<compiler>
 #<Lang>=<intepreter>
 #<Lang>=<compiler>,<intepreter>
-Bash=bash
-C++=g++
-Go=go
-Java=javac,java
-Python=python
-Perl=perl
-Ruby=ruby
+Use(Bash)=bash
+Use(C++)=g++
+Use(Go)=go
+Use(Java)=javac,java
+Use(Python)=python
+Use(Perl)=perl
+Use(Ruby)=ruby
 
+#Code Template
+#MUST be located in <language>/src/ and compiled by clide
+New(Bash)=newBash.sh
+New(C++)=newC++.cpp
+New(Go)=newGo.go
+New(Java)=newJava.jar
+New(Python)=newPython.py
+New(Perl)=newPerl.pl
+New(Ruby)=newRuby.rb
+
+#}
